<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchScreenActivity">

    <ImageView
        android:id="@+id/iv_search_bellycheer_logo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_address"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="170dp"
        android:clickable="true"
        android:src="@drawable/bellycheer_logo" />

    <ImageView
        android:id="@+id/iv_location_text_top"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/search_top_texts" />


    <EditText
        android:id="@+id/et_address"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_location_text_top"
        android:layout_centerHorizontal="true"
        android:hint="@string/Address"
        android:textColorHint="#5e6366" />

    <Spinner
        android:id="@+id/spinner_borough"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/et_address"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/boroughs_array"
        android:popupTheme="@android:style/ThemeOverlay.Material.Light"
        android:prompt="@string/borough_prompt"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/et_zip"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_borough"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:hint="@string/Zip"
        android:inputType="number"
        android:textColorHint="#5e6366" />

    <ImageView
        android:id="@+id/bt_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_zip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:src="@drawable/icon_current_location" />


    <ImageView
        android:id="@+id/iv_icon_kitchen"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_below="@+id/bt_current_location"
        android:layout_marginTop="29dp"
        android:layout_toEndOf="@+id/iv_icon_food_pantry"
        android:src="@drawable/icon_soup_kitchen" />


    <ImageView
        android:id="@+id/iv_icon_food_pantry"
        android:layout_width="80dp"
        android:layout_height="82dp"
        android:layout_alignEnd="@+id/iv_search_bellycheer_logo"
        android:layout_alignTop="@+id/iv_icon_kitchen"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="46dp"
        android:src="@drawable/icon_food_pantry" />

    <ImageView
        android:id="@+id/iv_icon_both"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_alignTop="@+id/iv_icon_kitchen"
        android:layout_toEndOf="@+id/iv_icon_kitchen"
        android:src="@drawable/icon_both_foods" />


</RelativeLayout>